[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kokonna-cli"
version = "0.1.0"
description = "CLI for the KoKonna e-ink photo frame OpenAPI"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Brian" }]
keywords = ["kokonna", "e-ink", "photo-frame", "openapi", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "responses>=0.23",
]

[project.scripts]
kokonna = "kokonna.cli:main"

[project.urls]
Homepage = "https://kokonna.art/zh-hans/pages/openapi_cn"

[tool.setuptools]
packages = ["kokonna"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
